--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Galería de Dibujos</h1>
-    <p>Proyectos creados con JavaScript y HTML5 Canvas con animación</p>
+    <p>Dibujos creados con JavaScript y HTML5 Canvas con animación</p>
   </header>
 
   <main class="galeria">
